worker/tests/ui/scheduled-wrong-return-type.stderr
error[E0308]: mismatched types
 --> tests/ui/scheduled-wrong-return-type.rs:8:13
  |
8 |   ) -> String {
  |  _____________^
9 | | }
  | |_^ expected `String`, found `()`
